@@ -1,3 +1,9 @@
+2006-10-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* nsd/tclthread.c: Fixed handling of mutex identifiers
+	in [ns_cond wait] to allow string-based handles as the
+	rest of the code.
+
 2006-10-02  Vlad Seryakov  <seryakov@users.sf.net>
 
 	nsd/driver.c: Make driver to use Unix domain sockets of 
@@ -25,6 +31,8 @@
 
 	* nsproxy/ns_proxy.man: Updated docs.
 	* tests/ns_proxy.test: Added tests to check -maxruns option.
+
+	* nsd/tclxkeylist.c: Fix to avoid setting object in interp result.
 
 2006-09-26  Bernd Eidenschink  <eide@users.sf.net>
 
